==> limaconaudio/zephyr/samples/drivers/sd_card_new/src/sdcard.c <==
#include "sdcard.h"
#include <stdio.h>
#include <gpio.h>
#include <spi.h>
#define SD_START_DATA_SINGLE_BLOCK_READ    0xFE  /*!< Data token start byte, Start Single Block Read */
#define SD_START_DATA_MULTIPLE_BLOCK_READ  0xFE  /*!< Data token start byte, Start Multiple Block Read */
#define SD_START_DATA_SINGLE_BLOCK_WRITE   0xFE  /*!< Data token start byte, Start Single Block Write */
#define SD_START_DATA_MULTIPLE_BLOCK_WRITE 0xFC  /*!< Data token start byte, Start Multiple Block Write */
#define SD_CMD0          0   /*!< CMD0 = 0x40 */
#define SD_CMD8          8   /*!< CMD8 = 0x48 */
#define SD_CMD9          9   /*!< CMD9 = 0x49 */
#define SD_CMD10         10  /*!< CMD10 = 0x4A */
#define SD_CMD12         12  /*!< CMD12 = 0x4C */
#define SD_CMD16         16  /*!< CMD16 = 0x50 */
#define SD_CMD17         17  /*!< CMD17 = 0x51 */
#define SD_CMD18         18  /*!< CMD18 = 0x52 */
#define SD_ACMD23        23  /*!< CMD23 = 0x57 */
#define SD_CMD24         24  /*!< CMD24 = 0x58 */
#define SD_CMD25         25  /*!< CMD25 = 0x59 */
#define SD_ACMD41        41  /*!< ACMD41 = 0x41 */
#define SD_CMD55         55  /*!< CMD55 = 0x55 */
#define SD_CMD58         58  /*!< CMD58 = 0x58 */
#define SD_CMD59         59  /*!< CMD59 = 0x59 */

static void sd_lowlevel_init(uint8_t spi_index)
{
    gpio_pin_configure(cs, pin, GPIO_DIR_OUT);
}

static void sd_write_data(uint8_t *data_buff, uint32_t length)
{
	struct spi_buf spi_bufs[] = {
                {
                        .buf = (u8_t *)data_buff,
                        .len = length
                }
        };

        const struct spi_buf_set tx = {
                .buffers = spi_bufs,
                .count = 1
        };

	spi_write(spi, &cfg, &tx);
}

static void sd_read_data(uint8_t *data_buff, uint32_t length)
{
	struct spi_buf spi_bufs[] = {
                {
                        .buf = (u8_t *)data_buff,
                        .len = length
                }
        };

        const struct spi_buf_set rx = {
                .buffers = spi_bufs,
                .count = 1
        };

	spi_read(spi, &cfg, &rx);
}

uint8_t sd_init(void)
{
	uint8_t frame[10], index, result;
	
	spi = device_get_binding(DT_DISK_SDHC0_BUS_NAME);
	__ASSERT_NO_MSG(spi != NULL);

	cs = device_get_binding(DT_DISK_SDHC0_CS_GPIOS_CONTROLLER);
	__ASSERT_NO_MSG(cs != NULL);

	/*!< Initialize SD_SPI */
	sd_lowlevel_init(0);
	/*!< SD chip select high */
	SD_CS_HIGH();
	/*!< Send dummy byte 0xFF, 10 times with CS high */
	/*!< Rise CS and MOSI for 80 clocks cycles */
	/*!< Send dummy byte 0xFF */
	for (index = 0; index < 10; index++)
		frame[index] = 0xFF;
	sd_write_data(frame, 10);
	/*------------Put SD in SPI mode--------------*/
	/*!< SD initialized and set to SPI mode properly */

    result = sd_send_cmd(SD_CMD0, 0, 0x95);
    result = sd_get_response(1);
    sd_end_cmd();
    if (result != 0x01)
    {
        printk("SD_CMD0 is %X\n", result);
        return 0xFF;
    }

	result = sd_send_cmd(SD_CMD8, 0x01AA, 0x87);
        result = sd_get_response(1);
	sd_read_data(frame, 4);
	sd_end_cmd();
	if (result != 0x01)
	{
        printk("SD_CMD8 is %X\n", result);
		return 0xFF;
    }
	index = 0xFF;
	while (index--) {
		sd_send_cmd(SD_CMD55, 0, 0);
    		result = sd_get_response(1);
		sd_end_cmd();
		if (result != 0x01) {
		printf("CMD55 err\n");
		return 0xFF;
		}
		sd_send_cmd(SD_ACMD41, 0x40000000, 0);
    		result = sd_get_response(0);
		sd_end_cmd();
		if (result == 0x00)
			break;
	}
	if (index == 0)
	{
        printk("SD_CMD55 is %X\n", result);
		return 0xFF;
    }
	index = 255;
	while(index--){
		result = sd_send_cmd(SD_CMD58, 0, 1);
    		result = sd_get_response(0);
		sd_read_data(frame, 4);
		sd_end_cmd();
		if(result == 0){
			break;
		}
	}
	if(index == 0)
	{
	    printk("SD_CMD58 is %X\n", result);
		return 0xFF;
	}
	if ((frame[0] & 0x40) == 0)
		return 0xFF;
//	cfg.frequency = 10000000;
	return sd_get_cardinfo(&cardinfo);
}
