==> Hades2001/K210_i8080ToRGB/src/hello_world/sdcard.c <==
#include "sdcard.h"
#include "sysctl.h"
#include "gpiohs.h"
#include "fpioa.h"
#include "dmac.h"
#include "spi.h"
#include <stdio.h>
#include "gpiohs.h"
#include "sleep.h"
#define MAIX_SDCARD_DEBUG 1
#define debug_print(x,arg...) printf(x,##arg)
#define debug_print(x,arg...)
#define SD_START_DATA_SINGLE_BLOCK_READ    0xFE  /*!< Data token start byte, Start Single Block Read */
#define SD_START_DATA_MULTIPLE_BLOCK_READ  0xFE  /*!< Data token start byte, Start Multiple Block Read */
#define SD_START_DATA_SINGLE_BLOCK_WRITE   0xFE  /*!< Data token start byte, Start Single Block Write */
#define SD_START_DATA_MULTIPLE_BLOCK_WRITE 0xFC  /*!< Data token start byte, Start Multiple Block Write */
#define SD_CMD0          0   /*!< CMD0 = 0x40 */
#define SD_CMD8          8   /*!< CMD8 = 0x48 */
#define SD_CMD9          9   /*!< CMD9 = 0x49 */
#define SD_CMD10         10  /*!< CMD10 = 0x4A */
#define SD_CMD12         12  /*!< CMD12 = 0x4C */
#define SD_CMD16         16  /*!< CMD16 = 0x50 */
#define SD_CMD17         17  /*!< CMD17 = 0x51 */
#define SD_CMD18         18  /*!< CMD18 = 0x52 */
#define SD_ACMD23        23  /*!< CMD23 = 0x57 */
#define SD_CMD24         24  /*!< CMD24 = 0x58 */
#define SD_CMD25         25  /*!< CMD25 = 0x59 */
#define SD_ACMD41        41  /*!< ACMD41 = 0x41 */
#define SD_CMD55         55  /*!< CMD55 = 0x55 */
#define SD_CMD58         58  /*!< CMD58 = 0x58 */
#define SD_CMD59         59  /*!< CMD59 = 0x59 */

static void sd_lowlevel_init(uint8_t spi_index)
{
    gpiohs_set_drive_mode(SD_CS_PIN, GPIO_DM_OUTPUT);
    spi_set_clk_rate(SD_SPI_DEVICE, 200000);     /*set clk rate*/
}

static void sd_write_data(uint8_t *data_buff, uint32_t length)
{
    spi_init(SD_SPI_DEVICE, SPI_WORK_MODE_0, SPI_FF_STANDARD, 8, 0);
    spi_send_data_standard(SD_SPI_DEVICE, SD_SS, NULL, 0, data_buff, length);
}

static void sd_read_data(uint8_t *data_buff, uint32_t length)
{

    spi_init(SD_SPI_DEVICE, SPI_WORK_MODE_0, SPI_FF_STANDARD, 8, 0);
    spi_receive_data_standard(SD_SPI_DEVICE, SD_SS, NULL, 0, data_buff, length);

}

uint8_t sd_init(void)
{
	uint8_t frame[10], index, result;
	cardinfo.active = 0;
	fpioa_set_function(TF_CK_PIN, FUNC_SPI1_SCLK);
    fpioa_set_function(TF_SI_PIN, FUNC_SPI1_D0);
    fpioa_set_function(TF_SO_PIN, FUNC_SPI1_D1);
	fpioa_set_function(TF_CS_PIN, FUNC_GPIOHS0 + SD_CS_PIN);
    //fpioa_set_function(25, FUNC_SPI0_SS0 + SD_SS);
	/*!< Initialize SD_SPI */
	sd_lowlevel_init(0);
	/*!< SD chip select high */
	SD_CS_HIGH();
	/*!< Send dummy byte 0xFF, 10 times with CS high */
	/*!< Rise CS and MOSI for 80 clocks cycles */
	/*!< Send dummy byte 0xFF */
	for (index = 0; index < 10; index++)
		frame[index] = 0xFF;
	sd_write_data(frame, 10);
	/*------------Put SD in SPI mode--------------*/
	/*!< SD initialized and set to SPI mode properly */

    sd_send_cmd(SD_CMD0, 0, 0x95);
    result = sd_get_response();
    sd_end_cmd();
    if (result != 0x01)
    {
    	printf("[MaixPy] %s | SD_CMD0 is %X\r\n",__func__,result);
        return 0xFF;
    }

	sd_send_cmd(SD_CMD8, 0x01AA, 0x87);
	/*!< 0x01 or 0x05 */
	result = sd_get_response();
	sd_read_data(frame, 4);
	sd_end_cmd();
	if (result != 0x01)
	{
		printf("[MaixPy] %s | SD_CMD8 is %X\r\n",__func__,result);
		return 0xFF;
    }
	index = 0xFF;
	while (index--) {
		sd_send_cmd(SD_CMD55, 0, 0);
		result = sd_get_response();
		sd_end_cmd();
		if (result != 0x01)
			return 0xFF;
		sd_send_cmd(SD_ACMD41, 0x40000000, 0);
		result = sd_get_response();
		sd_end_cmd();
		if (result == 0x00)
			break;
	}
	if (index == 0)
	{
        printf("SD_CMD55 is %X\r\n", result);
		return 0xFF;
    }
	index = 255;
	while(index--){
		sd_send_cmd(SD_CMD58, 0, 1);
		result = sd_get_response();
		sd_read_data(frame, 4);
		sd_end_cmd();
		debug_print("[MaixPy] %s |  frame[0] = %x \r\n",__func__,frame[0]);
		debug_print("[MaixPy] %s |  frame[1] = %x \r\n",__func__,frame[1]);
		debug_print("[MaixPy] %s |  frame[2] = %x \r\n",__func__,frame[2]);
		debug_print("[MaixPy] %s |  frame[3] = %x \r\n",__func__,frame[3]);
		debug_print("[MaixPy] %s |  result = %d \r\n",__func__,result);
		debug_print("[MaixPy] %s |  index = %d \r\n",__func__,index);
		if(result == 0){
			break;
		}
		
	}
	if(index == 0)
	{
		printf("[MaixPy] %s | SD_CMD58 is %X\r\n",__func__,result);
		return 0xFF;
	}
	if ((frame[0] & 0x40) == 0)
		sd_version = 1;
	else
	{
		sd_version = 2;
		SD_HIGH_SPEED_ENABLE();
	}
	if(1 == sd_version)
	{
		sd_send_cmd(SD_CMD16, 512, 0);
		if (sd_get_response() != 0x00) 
		{
			sd_end_cmd();
			return 0xFF;
		}	
	}
	if(0 == sd_get_cardinfo(&cardinfo))
	{
		cardinfo.active = 1;
		return 0;
	}
	return 0xFF;
}
